html complete, working on css

--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@
 }
 
 .banner-sign-up div {
-    /*hello*/
-    margin: 50px 10px;
+    justify-content: space-between;
 }
+
 
 .left-placeholder {
     background-color: #1F2937;
@@ -49,14 +49,19 @@
     color: #E5E7EB;
 }
 
+.empty {
+    display: flex;
+    width: 170px;
+    padding: 10px;
+}
+
 .left-placeholder h1 {
     color: white;
-    margin-bottom: 20px;
+    margin: 20px 0;
 }
 
 .right-placeholder {
     background-color: grey;
-    justify-content: end;
     color: white;
 }
 
