--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,29 @@
     border-color: white;
     border: 10px ;
 }
+
+.some-info-container {
+    display: flex;
+    justify-items: center;
+    background-color: blue;
+}
+
+.some-info-container {
+
+}
+
+.title-container {
+    justify-content: center;
+}
+
+.one, 
+.two, 
+.three, 
+.four{    
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    justify-content: space-between;
+    border:4px solid white;
+    border-radius: 10px;
+}
